package com.example.SOEX_PROJECT_JRN.security;

public interface SecurityData {

    String getSecurityData(int index, int index2);
    String getKey();
}
