@startuml
'https://plantuml.com/class-diagram

class HotelController {
    - HotelService hotelService
    getHotelsInArea(String latitude, String longitude): List<JsonNode>
}

class HotelService{
    - BookingRepo bookingRepo
    - TripAdvisorRepo tripadvisorRepo
    getHotelsInArea(String latitude, String longitude): List<JsonNode>
}

interface HotelRepository {
    getHotelsInArea(String latitude, String longitude): List<JsonNode>
}

class BookingRepo {
    getHotelsInArea(String latitude, String longitude): List<JsonNode>
}

class TripAdvisorRepo {
    getHotelsInArea(String latitude, String longitude): List<JsonNode>
}

interface SecurityData{
String getSecurityData(int index, int index2)
}

class BookingData{
- String[][] BookingData
+ String getSecurityData(int index, int index2)
}

class TripAdvisorData{
- String[][] TripadvisorData
+ String getSecurityData(int index, int index2)
}

HotelController --> HotelService
HotelService --> HotelRepository
BookingRepo ..|> HotelRepository
TripAdvisorRepo ..|> HotelRepository
BookingData ..|> SecurityData
TripAdvisorData ..|> SecurityData
BookingRepo --> BookingData
TripAdvisorRepo --> TripAdvisorData


@enduml
